lager-lang/examples/good/static_binding.lg
int main() {
    int x = 5;
    int f() {
        return x;
    }
    
    string x = "abc";
    
    print(f());
    
    return 0;
}
