lager-lang/examples/bad/wrong-number-of-args.lg
int f() {
    return 0;
}

int main() {
    print(f(7));
    
    return 0;
}
